packages/wasm/src/tests/snapshots/wasm__tests__partition__clean_paragraph_breaks_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      10
    ],
    "items": 5,
    "width": 46.96,
    "height": 44.24,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      11,
      45
    ],
    "items": 7,
    "width": 92.56,
    "height": 136.72,
    "x": 0.0,
    "y": 63.44
  },
  {
    "range": [
      47,
      84
    ],
    "items": 8,
    "width": 84.88,
    "height": 159.84,
    "x": 0.0,
    "y": 219.36
  },
  {
    "range": [
      88,
      124
    ],
    "items": 7,
    "width": 84.88,
    "height": 136.72,
    "x": 0.0,
    "y": 398.4
  },
  {
    "range": [
      126,
      140
    ],
    "items": 3,
    "width": 76.26,
    "height": 44.24,
    "x": 0.0,
    "y": 554.32
  }
]
