packages/wasm/src/tests/snapshots/wasm__tests__partition__clean_quote_footnote_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      13
    ],
    "items": 5,
    "width": 65.84,
    "height": 44.24,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      15,
      39
    ],
    "items": 9,
    "width": 63.76,
    "height": 113.6,
    "x": 0.0,
    "y": 85.84
  },
  {
    "range": [
      40,
      67
    ],
    "items": 7,
    "width": 56.16,
    "height": 136.72,
    "x": 0.0,
    "y": 218.64
  },
  {
    "range": [
      69,
      131
    ],
    "items": 15,
    "width": 102.16,
    "height": 67.36,
    "x": 0.0,
    "y": 396.96
  },
  {
    "range": [
      133,
      223
    ],
    "items": 46,
    "width": 517.28,
    "height": 134.3,
    "x": 0.0,
    "y": 505.92
  }
]
