packages/wasm/src/tests/snapshots/wasm__tests__partition__clean_raw_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      41
    ],
    "items": 17,
    "width": 57.6,
    "height": 180.74,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      43,
      97
    ],
    "items": 30,
    "width": 61.76,
    "height": 217.86,
    "x": 0.0,
    "y": 199.94
  },
  {
    "range": [
      99,
      115
    ],
    "items": 4,
    "width": 54.16,
    "height": 67.36,
    "x": 0.0,
    "y": 436.99
  }
]
