packages/wasm/src/tests/snapshots/wasm__tests__partition__clean_structural_then_text_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      45,
      62
    ],
    "items": 4,
    "width": 50.44,
    "height": 46.31,
    "x": 0.0,
    "y": 15.4
  }
]
