packages/wasm/src/tests/snapshots/wasm__tests__partition__clean_structure_chunks.snap
---
source: wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      24,
      31
    ],
    "items": 6,
    "width": 55.2,
    "height": 88.48,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      33,
      56
    ],
    "items": 9,
    "width": 46.8,
    "height": 136.72,
    "x": 0.0,
    "y": 130.08
  },
  {
    "range": [
      58,
      63
    ],
    "items": 7,
    "width": 26.24,
    "height": 9.12,
    "x": 18.8,
    "y": 315.76
  },
  {
    "range": [
      64,
      80
    ],
    "items": 15,
    "width": 72.16,
    "height": 37.5,
    "x": 17.6,
    "y": 336.56
  },
  {
    "range": [
      82,
      88
    ],
    "items": 15,
    "width": 35.82,
    "height": 14.32,
    "x": 28.5,
    "y": 422.4
  },
  {
    "range": [
      89,
      95
    ],
    "items": 6,
    "width": 35.82,
    "height": 14.32,
    "x": 28.5,
    "y": 445.52
  },
  {
    "range": [
      97,
      106
    ],
    "items": 11,
    "width": 8.32,
    "height": 113.6,
    "x": 0.0,
    "y": 503.2
  },
  {
    "range": [
      107,
      116
    ],
    "items": 4,
    "width": 15.28,
    "height": 67.36,
    "x": -0.16,
    "y": 636.0
  },
  {
    "range": [
      117,
      126
    ],
    "items": 6,
    "width": 8.59,
    "height": 113.6,
    "x": 0.0,
    "y": 722.56
  },
  {
    "range": [
      174,
      232
    ],
    "items": 18,
    "width": 35.1,
    "height": 119.88,
    "x": 0.0,
    "y": 877.76
  }
]
